--- a/form.html
+++ b/form.html
@@ -94,6 +94,7 @@
       </nav>
     </header>
     <div class="form-sec">
+      <h1 class="form-sec__title">ثبت‌نام در نمایشگاه</h1>
       <form action="#" id="form">
         <div class="form__row">
           <div class="form__col">
