complete login and profile pages

--- a/form.html
+++ b/form.html
@@ -93,8 +93,8 @@
         </div>
       </nav>
     </header>
-    <div class="form-sec">
-      <h1 class="form-sec__title">ثبت‌نام در نمایشگاه</h1>
+    <div class="box form-page">
+      <h1 class="form-page__title">ثبت‌نام در نمایشگاه</h1>
       <form action="#" id="form">
         <div class="form__row">
           <div class="form__col">
