--- a/index.html
+++ b/index.html
@@ -190,23 +190,50 @@
       </div>
     </div>
 
-    <div class="home-photos">
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-      <img src="img/photo.jpg" alt="" />
-    </div>
+    <section class="gallery">
+      <figure class="gallery__item gallery__item--1">
+        <img src="img/photo.jpg" alt="Gallery image 1" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--2">
+        <img src="img/photo.jpg" alt="Gallery image 2" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--3">
+        <img src="img/photo.jpg" alt="Gallery image 3" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--4">
+        <img src="img/photo.jpg" alt="Gallery image 4" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--5">
+        <img src="img/photo.jpg" alt="Gallery image 5" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--6">
+        <img src="img/photo.jpg" alt="Gallery image 6" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--7">
+        <img src="img/photo.jpg" alt="Gallery image 7" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--8">
+        <img src="img/photo.jpg" alt="Gallery image 8" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--9">
+        <img src="img/photo.jpg" alt="Gallery image 9" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--10">
+        <img src="img/photo.jpg" alt="Gallery image 10" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--11">
+        <img src="img/photo.jpg" alt="Gallery image 11" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--12">
+        <img src="img/photo.jpg" alt="Gallery image 12" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--13">
+        <img src="img/photo.jpg" alt="Gallery image 13" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--14">
+        <img src="img/photo.jpg" alt="Gallery image 14" class="gallery__img" />
+      </figure>
+    </section>
     <footer id="footer">
       <div class="footer-wrapper">
         <div class="footer-col">
