About us section by ghasem

--- a/index.html
+++ b/index.html
@@ -148,6 +148,63 @@
         <div class="hero-slider-pagination swiper-pagination"></div>
       </div>
     </div>
+    <!--  -->
+    <section class="section-about">
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">
+          صنایع دستی شما را با خود به سوی تاریخ و فرهنگ هم گام خواهد کرد
+        </h2>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-2">
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            موقعیتی عالی برای میثاق با فرهنگ
+          </h3>
+          <p class="paragraph">
+            صنایع دستی یا کاردستی نوعی کار است که در آن لوازم تزئینی و کاربردی
+            تنها با استفاده از دست یا ابزار ساده ساخته می‌شود. معمولاً این کلمه
+            به روش‌های سنتی ساختن کالاها و وسایل مختلف گفته می‌شود. استادکاری
+            مخصوص هر یک از این موارد مهم‌ترین ملاک است
+          </p>
+
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            صنایعی دستی جزاب که به ندرت فرصت دیدنشان را داریم
+          </h3>
+          <p class="paragraph">
+            صنایع دستی یا کاردستی نوعی کار است که در آن لوازم تزئینی و کاربردی
+            تنها با استفاده از دست یا ابزار ساده ساخته می‌شود
+          </p>
+
+          <a href="#" class="btn-text">بیشتر بدانید &rarr;</a>
+        </div>
+        <div class="col-1-of-2">
+          <div class="composition">
+            <img
+              sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+              alt="Photo 1"
+              class="composition__photo composition__photo--p1"
+              src="img/handi.jpg"
+            />
+
+            <img
+              sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+              alt="Photo 2"
+              class="composition__photo composition__photo--p2"
+              src="img/Iranian-handicrafts.jpg"
+            />
+
+            <img
+              sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+              alt="Photo 3"
+              class="composition__photo composition__photo--p3"
+              src="img/بهترین صنایع_دستی ایران.jpg"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--  -->
     <div class="home-stats">
       <div class="stats-card">
         <h2 class="stats-card__number"><span>۱۴۰۰۰</span></h2>
