event cards by ghasem

--- a/index.html
+++ b/index.html
@@ -246,7 +246,112 @@
         <img src="img/iran-logo.png" alt="" />
       </div>
     </div>
+    <!--  -->
+    <section class="section-tours" id="section-tours">
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">تنوع فرهنگی در غرفه ها</h2>
+      </div>
 
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--1">&nbsp;</div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--1"
+                  >صنایع دستی و فرهنگ عرب</span
+                >
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>چهار صد مشارکت کننده</li>
+                  <li>بیش از صد غرفه</li>
+                  <li>چهل رویداد جانبی</li>
+                  <li>تنوع چشم گیر</li>
+                  <li>پوشش تمامی فرهنگ های عرب</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">همین حالا</p>
+                  <p class="card__price-value">به ما بپیوندید</p>
+                </div>
+                <a href="#popup" class="btn btn--white">ثبت نام کنید</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--2">&nbsp;</div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--2"
+                  >صنایع دستی و فرهنگ ایران</span
+                >
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>چهار صد مشارکت کننده</li>
+                  <li>بیش از صد غرفه</li>
+                  <li>چهل رویداد جانبی</li>
+                  <li>تنوع چشم گیر</li>
+                  <li>پوشش تمامی فرهنگ های ایران</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-2">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">همین حالا</p>
+                  <p class="card__price-value">به ما بپیوندید</p>
+                </div>
+                <a href="#popup" class="btn btn--white">ثبت نام کنید</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--3">&nbsp;</div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--3"
+                  >صنایع دستی و فرهنگ هند</span
+                >
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>چهار صد مشارکت کننده</li>
+                  <li>بیش از صد غرفه</li>
+                  <li>چهل رویداد جانبی</li>
+                  <li>تنوع چشم گیر</li>
+                  <li>پوشش تمامی فرهنگ های هند</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-3">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">همین حالا</p>
+                  <p class="card__price-value">به ما بپیوندید</p>
+                </div>
+                <a href="#popup" class="btn btn--white">ثبت نام کنید</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="u-center-text u-margin-top-huge">
+        <a href="#" class="btn btn--green">انواع دیگر غرفه ها</a>
+      </div>
+    </section>
+    <!--  -->
     <section class="gallery">
       <figure class="gallery__item gallery__item--1">
         <img src="img/photo.jpg" alt="Gallery image 1" class="gallery__img" />
